Day 3
Code refactoring