@@ -9,6 +9,7 @@ import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.net.http.HttpResponse.BodyHandlers;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import com.google.gson.Gson;
@@ -22,13 +23,7 @@ public class Consumer {
 		String request = consumer.request(args[0]);
 
 		List<Movie> list = consumer.movies(request);
-		List<List<String>> listFromFields = consumer.listFromFields(list);
-
-		for (int i = 0; i < listFromFields.get(0).size(); i++) {
-			for (int j = 0; j < listFromFields.size(); j++) {
-				System.out.println(listFromFields.get(j).get(i));
-			}
-		}
+		list.forEach(System.out::println);
 	}
 
 	public String request(String api_key) {
@@ -52,21 +47,9 @@ public class Consumer {
 		Gson gson = new Gson();
 		String newJson = json.substring(9, (json.length() - 19));
 
-		Type listType = new TypeToken<ArrayList<Movie>>() {
-		}.getType();
+		Type listType = new TypeToken<ArrayList<Movie>>() {}.getType();
 		List<Movie> list = gson.fromJson(newJson, listType);
 
-		return list;
-	}
-
-	public List<List<String>> listFromFields(List<Movie> list) {
-		List<String> title = new ArrayList<>();
-		List<String> url = new ArrayList<>();
-
-		list.forEach(m -> {
-			title.add(m.getTitle());
-			url.add(m.getImage());
-		});
-		return List.of(title, url);
+		return Collections.unmodifiableList(list);
 	}
 }
